delete html tags from editor content, update article, article's attachments refactor

--- a/contentagregator/modules/redactor_zone/templates/articles.html
+++ b/contentagregator/modules/redactor_zone/templates/articles.html
@@ -19,7 +19,7 @@
                   </div>
                 <div class="row">
                   <div class="col d-flex justify-content-start">
-                    <a class="article-link" href="#">
+                    <a class="article-link" href="/redactor-zone/user-article/{{ article.article_id }}">
                       <b>{{ article.article.title[:20] }}</b>
                     </a>
                   </div>
