--- a/contentagregator/modules/redactor_zone/templates/create_an_article.html
+++ b/contentagregator/modules/redactor_zone/templates/create_an_article.html
@@ -18,102 +18,102 @@
         <div class="row justify-content-center">
             <div class="col d-flex justify-content-center">
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-0">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/001-game console.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[0] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[0] }}" id="check-category-0" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-1">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/045-sing.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[1] }}" id="check-category" name="check-category" checked>
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[1] }}" id="check-category-1" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-2">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/047-travel.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[2] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[2] }}" id="check-category-2" name="check-category">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col d-flex justify-content-center">
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-3">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/042-running.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[3] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[3] }}" id="check-category-3" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-4">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/039-reading.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[4] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[4] }}" id="check-category-4" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-5">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/036-photography.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[5] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[5] }}" id="check-category-5" name="check-category">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="d-flex justify-content-center">
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-6">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/011-computer.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[6] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[6] }}" id="check-category-6" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-7">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/030-nail polish.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[7] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[7] }}" id="check-category-7" name="check-category">
+                    </div>
                 </div>
                 <div class="card image-checkbox">
-                    <label for="check-category">
+                    <label for="check-category-8">
                         <div class="row justify-content-center">
                             <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
                         </div>
-                        <div class="row justify-content-center">
-                            <input class="form-check-input" type="radio" value="{{ categories[8] }}" id="check-category" name="check-category">
-                        </div>
                     </label>
+                    <div class="row justify-content-center">
+                        <input class="form-check-input" type="radio" value="{{ categories[8] }}" id="check-category-8" name="check-category">
+                    </div>
                 </div>
             </div>
         </div>
@@ -123,7 +123,11 @@
             <div class="title-container">
                 <div class="form-row align-items-center">
                         <b><label for="title">Type a title for an Article!</label></b>
+                        {% if user_article %}
+                        <input value="{{ user_article.article.title }}" type="text" class="form-control" id="title" name="title" required>
+                        {% else %}
                         <input type="text" class="form-control" placeholder="Enter a title" id="title" name="title" required>
+                        {% endif %}
                 </div>
             </div>
         </div>
@@ -134,11 +138,35 @@
             <div class="col d-flex jusify-content-center">
                 <div class="form-group col-md-12">
                     <b><label for="trumbowyg">Type an Article!</label></b>
+                    {% if user_article %}
+                    <div name="trumbowyg" id="trumbowyg">{{ user_article.article.content }}</div>
+                    {% else %}
                     <div name="trumbowyg" id="trumbowyg" placeholder="Start typing here"></div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
+    <div id="attachments_view">
+        <div class="d-flex flex-column align-items-end">
+            <div class="display-attachment-container">
+            {% if attachments %}
+            <h4 class="attach-title">Attachments:</h4>
+             {% for attachment in attachments %}
+            {% if attachment.file_name[36:]|length > 24 %}
+            <div class="row justify-content-end">
+                <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.id }}">{{ attachment.file_name[0:20] }}...  <i class="fas fa-times"></i></span>
+            </div>
+            {% else %}
+            <div class="row justify-content-end">
+                <span style="margin: 10px 0; width: fit-content;" class="btn btn-outline-secondary" data-id="{{ attachment.id }}">{{ attachment.file_name }}  <i class="fas fa-times"></i></span>
+            </div>
+            {% endif %}
+            {% endfor %}
+            {% endif %}
+            </div>		
+    </div>
+
     <div class="buttons-container">
         <div class="row">
             <div class="col">
@@ -155,5 +183,15 @@
     </div>
     
 </form>
+{% endblock %}
+{% block scripts %}
 <script type="text/javascript" src="{{ url_for('redactor_zone.static', filename='scripts/redactor_zone.js') }}"></script>
+<script>
+    var category_id = {{ user_article.article_category_id }}
+    $('.form-check-input').each(function(i ,obj){
+        if ($(this).val() == category_id){
+            $(this).prop('checked', true);
+        }
+    })
+</script>
 {% endblock %}
