--- a/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
+++ b/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
@@ -42,31 +42,6 @@ div#wave .dot:nth-child(3) {
     border-radius: 25px;
 }
 
-.image-checkbox
-{
-    cursor: pointer;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border: 4px solid transparent;
-    outline: 0;
-}
-
-    .image-checkbox input[type="checkbox"]
-    {
-        display: none;
-    }
-
-.image-checkbox-checked
-{
-  filter: blur(2px);
-}
-
-.card {
-  margin: 0 20px;
-  min-width: 20vw;
-}
-
 .title-container, .buttons-container {
   min-width: 1000px !important;
   margin: 50px auto;
@@ -92,6 +67,10 @@ div#wave .dot:nth-child(3) {
   border-radius: 0.3rem;
   cursor: pointer;
   margin-top: 1rem;
+}
+
+.attach-title {
+  text-align: right;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
