--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -111,6 +111,8 @@
         </header>
            
             {% block app %} {% endblock %}
+        <div id="cookies-modal-container"></div>
+          
         <div class="row justify-content-center">
             <footer>Designed by Aleksandra Czembrowska</footer>
         </div>
