delete articles modal

--- a/contentagregator/modules/redactor_zone/templates/articles.html
+++ b/contentagregator/modules/redactor_zone/templates/articles.html
@@ -12,9 +12,9 @@
                 <div class="row justify-content-end btn-delete-row">
                     <div class="col-4 d-flex justify-content-end">
                         <button class="rounded-circle btn-danger btn"
+                        data-target="#delete-modal-view"
                         data-toggle="modal"
-                        data-target=""
-                        data-url="">&times;</button>
+                        data-url="/redactor-zone/delete-article/{{ article.article_id }}">&times;</button>
                       </div>
                   </div>
                 <div class="row">
