--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -112,7 +112,7 @@
            
             {% block app %} {% endblock %}
         <div id="cookies-modal-container"></div>
-          
+        <div class="modal fade" id="delete-modal-view" tabindex="-1" role="dialog" ></div>
         <div class="row justify-content-center">
             <footer>Designed by Aleksandra Czembrowska</footer>
         </div>
