--- a/contentagregator/modules/redactor_zone/templates/notes.html
+++ b/contentagregator/modules/redactor_zone/templates/notes.html
@@ -50,10 +50,9 @@
 <script src="{{ url_for('redactor_zone.static', filename='scripts/redactor_zone.js') }}"></script>
 <script>
     var user_id = {{ user_id }}
-    $('#delete-thrash').click(function () {
-    var url_ = $(this).attr('data-url');
+    $('#delete-thrash').on('click', function () {
     $.ajax({
-        url: url_,
+        url: $(this).attr('data-url'),
         type: 'DELETE',
     });
         location.href='/redactor-zone/user-notes';
