adding notes fix

--- a/contentagregator/modules/redactor_zone/templates/notes.html
+++ b/contentagregator/modules/redactor_zone/templates/notes.html
@@ -20,7 +20,7 @@
     </div>
     <div class="col">
         <div class="row justify-content-start">
-            <div class="d-flex align-content-start flex-wrap ideas-container">
+            <div class="d-flex align-content-start flex-wrap notes-container">
             {% for note in user_notes %}
             <div class="note-container">
                 <textarea data-id='{{ note.note_id }}' readonly>
