adding and deleting notes refactor

--- a/contentagregator/modules/redactor_zone/templates/notes.html
+++ b/contentagregator/modules/redactor_zone/templates/notes.html
@@ -27,7 +27,8 @@
                     {{ note.note_content }}
                 </textarea>
                 <button  type="button" class="btn btn-light" id="delete-thrash"
-                    data-url="/redactor-zone/delete-note/{{ note.note_id }}">
+                    data-url="/redactor-zone/delete-note/{{ note.note_id }}"
+                    data-id='{{ note.note_id }}'>
                     <i class="fa fa-trash"></i>
             </button>
             </div>
@@ -36,12 +37,6 @@
         </div>
     </div>
 </div>
-
- 
-
-    
-
-
 
 
 
