delete notes fix

--- a/contentagregator/modules/redactor_zone/templates/notes.html
+++ b/contentagregator/modules/redactor_zone/templates/notes.html
@@ -26,7 +26,7 @@
                 <textarea data-id='{{ note.note_id }}' readonly>
                     {{ note.note_content }}
                 </textarea>
-                <button  type="button" class="btn btn-light" id="delete-thrash"
+                <button  type="button" class="btn btn-light delete-thrash"
                     data-url="/redactor-zone/delete-note/{{ note.note_id }}"
                     data-id='{{ note.note_id }}'>
                     <i class="fa fa-trash"></i>
