--- a/contentagregator/modules/redactor_zone/templates/redactor_zone.html
+++ b/contentagregator/modules/redactor_zone/templates/redactor_zone.html
@@ -92,6 +92,12 @@
   </div>
 </div>
 
+<div class="latest-notes-title">
+  <h2>Your latest articles:</h2>
+</div>
+
+<div id="dashboard-articles"></div>
+
 {% endblock %}
 {% block scripts %}
 <script src="{{ url_for('redactor_zone.static', filename='scripts/redactor_zone.js') }}"></script>
