--- a/contentagregator/modules/redactor_zone/templates/articles.html
+++ b/contentagregator/modules/redactor_zone/templates/articles.html
@@ -20,7 +20,7 @@
                 <div class="row">
                   <div class="col d-flex justify-content-start">
                     <a class="article-link" href="/redactor-zone/user-article/{{ article.article_id }}">
-                      <b>{{ article.article.title[:20] }}</b>
+                      <b>{{ article.article.title[:20] or ''}}</b>
                     </a>
                   </div>
                 </div>
