setting up forum main site

--- a/contentagregator/templates/base.html
+++ b/contentagregator/templates/base.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="{{ url_for('how_to_start') }}">How to start?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><img class='nav-logo' src="{{ url_for('static', filename='img/nav/discussion.png') }}"></a>
+              <a class="nav-link" href="{{ url_for('redactor_zone_forum_main_get') }}"><img class='nav-logo' src="{{ url_for('static', filename='img/nav/discussion.png') }}"></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-list"></i></a>
