create post template

--- a/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
+++ b/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
@@ -6,6 +6,7 @@
 .forum-main-img {
     width: 60vw;
     height: 55vh;
+    border: 1px solid red;
 }
 
 
@@ -15,4 +16,13 @@
 
 .card {
     background-color: inherit !important;
+    width: 21rem;
+}
+
+.col {
+    margin: 20px auto;
+}
+
+.post-section {
+    margin: 50px auto;
 }
