--- a/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
@@ -12,28 +12,28 @@
     </div>
     <div class="row justify-content-center">
         <div class="col d-flex justify-content-between">
-            <div class="card border-danger mb-3" style="max-width: 18rem;">
+            <div class="card border-danger mb-3">
                 <div class="card-body text-light">
                     <h5 class="card-title">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
+                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/049-writing.png') }}"/>
                       </h5>
-                      <p class="card-text">Some quick example text.</p>
+                      <a href="{{ url_for('redactor_zone_forum_create_post_get') }}"><p class="card-text">Write a post.</p></a>
                 </div>
               </div>
-              <div class="card border-danger mb-3" style="max-width: 18rem;">
+              <div class="card border-danger mb-3">
                 <div class="card-body text-light">
                     <h5 class="card-title">
-                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
+                        <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/025-Jigsaw.png') }}"/>
                     </h5>
-                    <p class="card-text">Some quick example text.</p>
+                    <p class="card-text">Explore.</p>
                 </div>
               </div>
-              <div class="card border-danger mb-3" style="max-width: 18rem;">
+              <div class="card border-danger mb-3">
                 <div class="card-body text-light">
                   <h5 class="card-title">
-                    <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/029-movie.png') }}"/>
+                    <img src="{{ url_for('redactor_zone.static', filename='img/categories/png/046-stamp collecting.png') }}"/>
                   </h5>
-                  <p class="card-text">Some quick example text.</p>
+                  <p class="card-text">Go to Your posts.</p>
                 </div>
               </div>
         </div>
