adding forum to project

--- a/contentagregator/modules/redactor_zone/templates/redactor_zone.html
+++ b/contentagregator/modules/redactor_zone/templates/redactor_zone.html
@@ -66,8 +66,8 @@
     </h1>
   </div>
 </div>
-  <div id="progressionContainer">
-    <div id="progressionBar"></div>
+  <div class="progress" id="progressionContainer">
+    <div id="progressionBar" class="progress-bar progress-bar-striped bg-danger" role="progressbar"></div>
   </div>
 
 <div class="row justify-content-center">
