--- a/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
+++ b/contentagregator/modules/redactor_zone_forum/static/css/forum-main.css
@@ -31,3 +31,13 @@
     margin-right: 15px;
     height: fit-content;
 }
+
+.c-2 {
+    margin: 50px auto;
+    background-color:rgb(34, 32, 32);
+}
+
+.response-content {
+    font-family:sans-serif;
+    font-weight:300;
+}
