--- a/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-create.html
@@ -9,14 +9,10 @@
 <div id="forum-container">
     <label for="username" class="form-label">Username</label>
     <input id="username" class="form-control" type="text" placeholder="{{ user.username }}" aria-label="readonly input example" readonly>
-    <label for="post-categories" class="form-label">Datalist example</label>
-    <input class="form-control" list="datalistOptions" placeholder="Type to search group...">
-    <datalist id="datalistOptions" name="post_groups">
-        <option value="Help">
-        <option value="Newest">
-        <option value="Trends">
-        <option value="Want to cooperate">
-    </datalist>
+    <div class="mb-3 post-section">
+        <label for="post-group" class="form-label">Group</label>
+        <input class="form-control" name="post_groups" id="post-group" placeholder="Type group...">
+    </div>
     <div class="mb-3 post-section">
         <label for="post-title" class="form-label">Title</label>
         <input name="post_title" type="text" class="form-control" id="post-title" placeholder="Type title...">
