--- a/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
+++ b/contentagregator/modules/redactor_zone_forum/templates/forum-index.html
@@ -43,7 +43,15 @@
         <div class="col d-flex justify-content-start">
             <h2><span style="color: red;">LATEST</span>POSTS</h2>
         </div>
+        <div class="col d-flex justify-content-start">
+          <div class="posts-container-1"></div>
+      </div>
     </div>
+    <div class="row justify-content-center" style="margin-top: 30px;">
+      <div class="col d-flex justify-content-start">
+        <div class="posts-container-1"></div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
