--- a/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
+++ b/contentagregator/modules/redactor_zone/static/css/redactor_zone.css
@@ -237,3 +237,13 @@ textarea:focus { box-shadow:0 5px 12px rgba(0,0,0,0.2); outline:none; }
 .card-title {
   width: fit-content;
 }
+
+.c-2 {
+  margin: 50px auto;
+  background-color:rgb(34, 32, 32);
+}
+
+#articles-container {
+  width: 1000px;
+  margin: 0 auto;
+}
